install(FILES "opencv2_ex/opencv2_ex.hpp"
    DESTINATION include/opencv2_ex
    COMPONENT dev)

install(FILES "opencv2_ex/color_histogram.hpp"
    DESTINATION include/opencv2_ex
    COMPONENT dev)

install(FILES "opencv2_ex/histogram_1d.hpp"
    DESTINATION include/opencv2_ex
    COMPONENT dev)